# wiki-finance-dq

./: .gitignore  DESIGN_DOC.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
src/: alerts.py  coverage_check.py  distribution_shift.py  duplicate_detector.py  loader.py  main.py  missing_check.py  missing_values.py  report.py  spike_detector.py
tests/: test_checks.py  test_validators.py
